--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier": "^2.8.8",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-mouse-particles": "^1.1.5",
 		"starknet": "5.24.3",
 		"styled-components": "^5.3.11",
 		"typescript": "5.4.5",
