--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
 	"devDependencies": {
 		"@playwright/test": "^1.42.1",
 		"@types/axios": "^0.14.0",
+		"@types/jest": "^29.5.12",
 		"@types/node": "20.12.7",
 		"@types/react": "18.2.79",
 		"@types/react-dom": "18.2.25",
 		"@types/styled-components": "^5.1.34",
+		"@types/supertest": "^6.0.2",
 		"cypress": "^11.2.0",
-		"jsdom": "^24.1.0"
+		"jest": "^29.7.0",
+		"jsdom": "^24.1.0",
+		"supertest": "^7.0.0"
 	}
 }
