--- a/package.json
+++ b/package.json
@@ -16,37 +16,38 @@
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^15.0.7",
 		"@testing-library/user-event": "^14.5.2",
-		"@types/node": "18.11.18",
-		"@types/react": "18.0.26",
-		"@types/react-dom": "18.0.10",
 		"@vitejs/plugin-react": "^4.3.0",
 		"axios": "^1.2.2",
-		"eslint": "8.32.0",
-		"eslint-config-next": "13.1.2",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "^14.2.3",
 		"jotai": "2.5.0",
 		"msw": "^2.3.0",
-		"next": "14.2.1",
-		"prettier": "^2.8.8",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"next": "14.2.3",
+		"prettier": "^3.2.5",
+		"react": "^18",
+		"react-dom": "^18",
 		"react-mouse-particles": "^1.1.5",
 		"starknet": "5.24.3",
 		"styled-components": "^5.3.11",
-		"typescript": "5.4.5",
+		"typescript": "^5",
 		"vitest": "^1.6.0"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.42.1",
 		"@types/axios": "^0.14.0",
 		"@types/jest": "^29.5.12",
-		"@types/node": "20.12.7",
-		"@types/react": "18.2.79",
-		"@types/react-dom": "18.2.25",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
 		"@types/styled-components": "^5.1.34",
 		"@types/supertest": "^6.0.2",
 		"cypress": "^11.2.0",
 		"jest": "^29.7.0",
 		"jsdom": "^24.1.0",
 		"supertest": "^7.0.0"
+	},
+	"resolutions": {
+		"@types/react": "^18",
+		"@types/react-dom": "^18"
 	}
 }
